test/files/neg/t2918.scala
object Test {
  def g[X, A[X] <: A[X]](x: A[X]) = x
}
